--- a/app/projects/page.module.scss
+++ b/app/projects/page.module.scss
@@ -2,11 +2,12 @@
 
 .page {
     font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
+    min-height: 100dvh;
     width: 8.5in;
     padding: utilities.$page-padding;
     display: flex;
     flex-direction: column;
-    gap: calc(utilities.$line-height * 3);
+    gap: utilities.$page-gap;
 
     @media print {
         padding: 0.5in;
@@ -34,8 +35,10 @@
         }
 
         @media (max-width: 500px) {
+            padding-top: 1in;
             padding-left: 0.25in;
             padding-right: 0.25in;
+            gap: calc(utilities.$line-height * 3);
         }
     }
 }
